assignments/01-java/done/aufgabe1.txt
1)
Compilerfehler
HelloWorld.java:3: error: ';' expected
        System.out.println("Hello, World")       
                                          ^
1 error

2)
Compilerfehler
HelloWorld.java:1: error: class HalloWelt is public, should be declared in a file named HalloWelt.java
public class HalloWelt {
       ^
1 error

3)
Laufzeitfehler
Error: Main method not found in class HelloWorld, please define the main method as:
   public static void main(String[] args)
or a JavaFX application class must extend javafx.application.Application

4)
Kein Fehler
